Ajuste en peso y talla

--- a/el primer trabajo1.html
+++ b/el primer trabajo1.html
@@ -21,8 +21,8 @@
     <p>Te ayudo a saber tu IMC con solo dos preguntas</p>
     <p>Tu IMC es<p>
 <script>
-    var peso = prompt("Ingresa tu peso");
-    var talla = prompt("ingresa tu altura");
+    var peso = prompt("Ingresa tu peso en kilos y gramos");
+    var talla = prompt("ingresa tu altura en metros con centimetros");
     var t2 = talla * talla;
     var IMC;
     IMC = peso / t2;
